src/converters/grammar/generated/MScGrammarParser.ts
// Generated from src/converters/grammar/MScGrammar.g4 by ANTLR 4.9.0-SNAPSHOT


import { ATN } from "antlr4ts/atn/ATN";
import { ATNDeserializer } from "antlr4ts/atn/ATNDeserializer";
import { FailedPredicateException } from "antlr4ts/FailedPredicateException";
import { NotNull } from "antlr4ts/Decorators";
import { NoViableAltException } from "antlr4ts/NoViableAltException";
import { Override } from "antlr4ts/Decorators";
import { Parser } from "antlr4ts/Parser";
import { ParserRuleContext } from "antlr4ts/ParserRuleContext";
import { ParserATNSimulator } from "antlr4ts/atn/ParserATNSimulator";
import { ParseTreeListener } from "antlr4ts/tree/ParseTreeListener";
import { ParseTreeVisitor } from "antlr4ts/tree/ParseTreeVisitor";
import { RecognitionException } from "antlr4ts/RecognitionException";
import { RuleContext } from "antlr4ts/RuleContext";
//import { RuleVersion } from "antlr4ts/RuleVersion";
import { TerminalNode } from "antlr4ts/tree/TerminalNode";
import { Token } from "antlr4ts/Token";
import { TokenStream } from "antlr4ts/TokenStream";
import { Vocabulary } from "antlr4ts/Vocabulary";
import { VocabularyImpl } from "antlr4ts/VocabularyImpl";

import * as Utils from "antlr4ts/misc/Utils";

import { MScGrammarListener } from "./MScGrammarListener";

export class MScGrammarParser extends Parser {
	public static readonly T__0 = 1;
	public static readonly T__1 = 2;
	public static readonly T__2 = 3;
	public static readonly T__3 = 4;
	public static readonly T__4 = 5;
	public static readonly T__5 = 6;
	public static readonly T__6 = 7;
	public static readonly T__7 = 8;
	public static readonly T__8 = 9;
	public static readonly T__9 = 10;
	public static readonly T__10 = 11;
	public static readonly T__11 = 12;
	public static readonly T__12 = 13;
	public static readonly T__13 = 14;
	public static readonly T__14 = 15;
	public static readonly T__15 = 16;
	public static readonly T__16 = 17;
	public static readonly T__17 = 18;
	public static readonly T__18 = 19;
	public static readonly T__19 = 20;
	public static readonly T__20 = 21;
	public static readonly T__21 = 22;
	public static readonly T__22 = 23;
	public static readonly T__23 = 24;
	public static readonly T__24 = 25;
	public static readonly WORD = 26;
	public static readonly SPACE = 27;
	public static readonly NEWLINE = 28;
	public static readonly RULE_description = 0;
	public static readonly RULE_leadingText = 1;
	public static readonly RULE_statementList = 2;
	public static readonly RULE_initialStatement = 3;
	public static readonly RULE_statement = 4;
	public static readonly RULE_closingStatement = 5;
	public static readonly RULE_afterStatement = 6;
	public static readonly RULE_andSubProcess = 7;
	public static readonly RULE_orSubProcess = 8;
	public static readonly RULE_belongStatement = 9;
	public static readonly RULE_immediatelyExpression = 10;
	public static readonly RULE_eventuallyExpression = 11;
	public static readonly RULE_sequenceStartActivityExpression = 12;
	public static readonly RULE_andStartActivityExpression = 13;
	public static readonly RULE_orStartActivityExpression = 14;
	public static readonly RULE_repeatSinceStartActivityExpression = 15;
	public static readonly RULE_endActivityExpression = 16;
	public static readonly RULE_sequenceEndActivityExpression = 17;
	public static readonly RULE_andEndActivityExpression = 18;
	public static readonly RULE_orEndActivityExpression = 19;
	public static readonly RULE_activity = 20;
	public static readonly RULE_andSubProcessId = 21;
	public static readonly RULE_orSubProcessId = 22;
	public static readonly RULE_role = 23;
	// tslint:disable:no-trailing-whitespace
	public static readonly ruleNames: string[] = [
		"description", "leadingText", "statementList", "initialStatement", "statement", 
		"closingStatement", "afterStatement", "andSubProcess", "orSubProcess", 
		"belongStatement", "immediatelyExpression", "eventuallyExpression", "sequenceStartActivityExpression", 
		"andStartActivityExpression", "orStartActivityExpression", "repeatSinceStartActivityExpression", 
		"endActivityExpression", "sequenceEndActivityExpression", "andEndActivityExpression", 
		"orEndActivityExpression", "activity", "andSubProcessId", "orSubProcessId", 
		"role",
	];

	private static readonly _LITERAL_NAMES: Array<string | undefined> = [
		undefined, "'The following textual description follows the closed-world assumption, meaning that only the activities specified can be executed in the specified order. Any possible activity and execution that is not specified is considered impossible.'", 
		"'Initially start '", "'.'", "'After '", "', the process finishes.'", 
		"', '", "': '", "' and '", "' or '", "'Activity '", "' is performed by '", 
		"'immediately '", "'eventually '", "'start '", "' and start '", "'either start '", 
		"' or start '", "'repeat since '", "' ends'", "' ends and '", "'either '", 
		"' ends or '", "'\"'", "'('", "')'",
	];
	private static readonly _SYMBOLIC_NAMES: Array<string | undefined> = [
		undefined, undefined, undefined, undefined, undefined, undefined, undefined, 
		undefined, undefined, undefined, undefined, undefined, undefined, undefined, 
		undefined, undefined, undefined, undefined, undefined, undefined, undefined, 
		undefined, undefined, undefined, undefined, undefined, "WORD", "SPACE", 
		"NEWLINE",
	];
	public static readonly VOCABULARY: Vocabulary = new VocabularyImpl(MScGrammarParser._LITERAL_NAMES, MScGrammarParser._SYMBOLIC_NAMES, []);

	// @Override
	// @NotNull
	public get vocabulary(): Vocabulary {
		return MScGrammarParser.VOCABULARY;
	}
	// tslint:enable:no-trailing-whitespace

	// @Override
	public get grammarFileName(): string { return "MScGrammar.g4"; }

	// @Override
	public get ruleNames(): string[] { return MScGrammarParser.ruleNames; }

	// @Override
	public get serializedATN(): string { return MScGrammarParser._serializedATN; }

	protected createFailedPredicateException(predicate?: string, message?: string): FailedPredicateException {
		return new FailedPredicateException(this, predicate, message);
	}

	constructor(input: TokenStream) {
		super(input);
		this._interp = new ParserATNSimulator(MScGrammarParser._ATN, this);
	}
	// @RuleVersion(0)
	public description(): DescriptionContext {
		let _localctx: DescriptionContext = new DescriptionContext(this._ctx, this.state);
		this.enterRule(_localctx, 0, MScGrammarParser.RULE_description);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 48;
			this.leadingText();
			this.state = 49;
			this.statementList();
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public leadingText(): LeadingTextContext {
		let _localctx: LeadingTextContext = new LeadingTextContext(this._ctx, this.state);
		this.enterRule(_localctx, 2, MScGrammarParser.RULE_leadingText);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 51;
			this.match(MScGrammarParser.T__0);
			this.state = 55;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while (_la === MScGrammarParser.NEWLINE) {
				{
				{
				this.state = 52;
				this.match(MScGrammarParser.NEWLINE);
				}
				}
				this.state = 57;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public statementList(): StatementListContext {
		let _localctx: StatementListContext = new StatementListContext(this._ctx, this.state);
		this.enterRule(_localctx, 4, MScGrammarParser.RULE_statementList);
		try {
			let _alt: number;
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 58;
			this.initialStatement();
			this.state = 62;
			this._errHandler.sync(this);
			_alt = this.interpreter.adaptivePredict(this._input, 1, this._ctx);
			while (_alt !== 1 && _alt !== ATN.INVALID_ALT_NUMBER) {
				if (_alt === 1 + 1) {
					{
					{
					this.state = 59;
					this.statement();
					}
					}
				}
				this.state = 64;
				this._errHandler.sync(this);
				_alt = this.interpreter.adaptivePredict(this._input, 1, this._ctx);
			}
			this.state = 65;
			this.closingStatement();
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public initialStatement(): InitialStatementContext {
		let _localctx: InitialStatementContext = new InitialStatementContext(this._ctx, this.state);
		this.enterRule(_localctx, 6, MScGrammarParser.RULE_initialStatement);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 67;
			this.match(MScGrammarParser.T__1);
			this.state = 68;
			this.activity();
			this.state = 69;
			this.match(MScGrammarParser.T__2);
			this.state = 73;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while (_la === MScGrammarParser.NEWLINE) {
				{
				{
				this.state = 70;
				this.match(MScGrammarParser.NEWLINE);
				}
				}
				this.state = 75;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public statement(): StatementContext {
		let _localctx: StatementContext = new StatementContext(this._ctx, this.state);
		this.enterRule(_localctx, 8, MScGrammarParser.RULE_statement);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 81;
			this._errHandler.sync(this);
			switch ( this.interpreter.adaptivePredict(this._input, 3, this._ctx) ) {
			case 1:
				{
				this.state = 76;
				this.afterStatement();
				}
				break;

			case 2:
				{
				this.state = 77;
				this.closingStatement();
				}
				break;

			case 3:
				{
				this.state = 78;
				this.andSubProcess();
				}
				break;

			case 4:
				{
				this.state = 79;
				this.orSubProcess();
				}
				break;

			case 5:
				{
				this.state = 80;
				this.belongStatement();
				}
				break;
			}
			this.state = 86;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while (_la === MScGrammarParser.NEWLINE) {
				{
				{
				this.state = 83;
				this.match(MScGrammarParser.NEWLINE);
				}
				}
				this.state = 88;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public closingStatement(): ClosingStatementContext {
		let _localctx: ClosingStatementContext = new ClosingStatementContext(this._ctx, this.state);
		this.enterRule(_localctx, 10, MScGrammarParser.RULE_closingStatement);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 89;
			this.match(MScGrammarParser.T__3);
			this.state = 90;
			this.endActivityExpression();
			this.state = 91;
			this.match(MScGrammarParser.T__4);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public afterStatement(): AfterStatementContext {
		let _localctx: AfterStatementContext = new AfterStatementContext(this._ctx, this.state);
		this.enterRule(_localctx, 12, MScGrammarParser.RULE_afterStatement);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 93;
			this.match(MScGrammarParser.T__3);
			this.state = 94;
			this.endActivityExpression();
			this.state = 95;
			this.match(MScGrammarParser.T__5);
			this.state = 98;
			this._errHandler.sync(this);
			switch (this._input.LA(1)) {
			case MScGrammarParser.T__11:
				{
				this.state = 96;
				this.immediatelyExpression();
				}
				break;
			case MScGrammarParser.T__12:
				{
				this.state = 97;
				this.eventuallyExpression();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			this.state = 100;
			this.match(MScGrammarParser.T__2);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public andSubProcess(): AndSubProcessContext {
		let _localctx: AndSubProcessContext = new AndSubProcessContext(this._ctx, this.state);
		this.enterRule(_localctx, 14, MScGrammarParser.RULE_andSubProcess);
		try {
			let _alt: number;
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 102;
			this.andSubProcessId();
			this.state = 103;
			this.match(MScGrammarParser.T__6);
			this.state = 104;
			this.activity();
			this.state = 105;
			this.match(MScGrammarParser.T__7);
			this.state = 106;
			this.activity();
			this.state = 111;
			this._errHandler.sync(this);
			_alt = this.interpreter.adaptivePredict(this._input, 6, this._ctx);
			while (_alt !== 1 && _alt !== ATN.INVALID_ALT_NUMBER) {
				if (_alt === 1 + 1) {
					{
					{
					this.state = 107;
					this.match(MScGrammarParser.T__7);
					this.state = 108;
					this.activity();
					}
					}
				}
				this.state = 113;
				this._errHandler.sync(this);
				_alt = this.interpreter.adaptivePredict(this._input, 6, this._ctx);
			}
			this.state = 114;
			this.match(MScGrammarParser.T__2);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public orSubProcess(): OrSubProcessContext {
		let _localctx: OrSubProcessContext = new OrSubProcessContext(this._ctx, this.state);
		this.enterRule(_localctx, 16, MScGrammarParser.RULE_orSubProcess);
		try {
			let _alt: number;
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 116;
			this.orSubProcessId();
			this.state = 117;
			this.match(MScGrammarParser.T__6);
			this.state = 118;
			this.activity();
			this.state = 119;
			this.match(MScGrammarParser.T__8);
			this.state = 120;
			this.activity();
			this.state = 125;
			this._errHandler.sync(this);
			_alt = this.interpreter.adaptivePredict(this._input, 7, this._ctx);
			while (_alt !== 1 && _alt !== ATN.INVALID_ALT_NUMBER) {
				if (_alt === 1 + 1) {
					{
					{
					this.state = 121;
					this.match(MScGrammarParser.T__8);
					this.state = 122;
					this.activity();
					}
					}
				}
				this.state = 127;
				this._errHandler.sync(this);
				_alt = this.interpreter.adaptivePredict(this._input, 7, this._ctx);
			}
			this.state = 128;
			this.match(MScGrammarParser.T__2);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public belongStatement(): BelongStatementContext {
		let _localctx: BelongStatementContext = new BelongStatementContext(this._ctx, this.state);
		this.enterRule(_localctx, 18, MScGrammarParser.RULE_belongStatement);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 130;
			this.match(MScGrammarParser.T__9);
			this.state = 131;
			this.activity();
			this.state = 132;
			this.match(MScGrammarParser.T__10);
			this.state = 133;
			this.role();
			this.state = 134;
			this.match(MScGrammarParser.T__2);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public immediatelyExpression(): ImmediatelyExpressionContext {
		let _localctx: ImmediatelyExpressionContext = new ImmediatelyExpressionContext(this._ctx, this.state);
		this.enterRule(_localctx, 20, MScGrammarParser.RULE_immediatelyExpression);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 136;
			this.match(MScGrammarParser.T__11);
			this.state = 141;
			this._errHandler.sync(this);
			switch ( this.interpreter.adaptivePredict(this._input, 8, this._ctx) ) {
			case 1:
				{
				this.state = 137;
				this.sequenceStartActivityExpression();
				}
				break;

			case 2:
				{
				this.state = 138;
				this.andStartActivityExpression();
				}
				break;

			case 3:
				{
				this.state = 139;
				this.orStartActivityExpression();
				}
				break;

			case 4:
				{
				this.state = 140;
				this.repeatSinceStartActivityExpression();
				}
				break;
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public eventuallyExpression(): EventuallyExpressionContext {
		let _localctx: EventuallyExpressionContext = new EventuallyExpressionContext(this._ctx, this.state);
		this.enterRule(_localctx, 22, MScGrammarParser.RULE_eventuallyExpression);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 143;
			this.match(MScGrammarParser.T__12);
			this.state = 144;
			this.sequenceStartActivityExpression();
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public sequenceStartActivityExpression(): SequenceStartActivityExpressionContext {
		let _localctx: SequenceStartActivityExpressionContext = new SequenceStartActivityExpressionContext(this._ctx, this.state);
		this.enterRule(_localctx, 24, MScGrammarParser.RULE_sequenceStartActivityExpression);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 146;
			this.match(MScGrammarParser.T__13);
			this.state = 147;
			this.activity();
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public andStartActivityExpression(): AndStartActivityExpressionContext {
		let _localctx: AndStartActivityExpressionContext = new AndStartActivityExpressionContext(this._ctx, this.state);
		this.enterRule(_localctx, 26, MScGrammarParser.RULE_andStartActivityExpression);
		try {
			let _alt: number;
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 149;
			this.match(MScGrammarParser.T__13);
			this.state = 152;
			this._errHandler.sync(this);
			switch (this._input.LA(1)) {
			case MScGrammarParser.T__22:
				{
				this.state = 150;
				this.activity();
				}
				break;
			case MScGrammarParser.T__23:
				{
				this.state = 151;
				this.orSubProcessId();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			this.state = 154;
			this.match(MScGrammarParser.T__14);
			this.state = 157;
			this._errHandler.sync(this);
			switch (this._input.LA(1)) {
			case MScGrammarParser.T__22:
				{
				this.state = 155;
				this.activity();
				}
				break;
			case MScGrammarParser.T__23:
				{
				this.state = 156;
				this.orSubProcessId();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			this.state = 166;
			this._errHandler.sync(this);
			_alt = this.interpreter.adaptivePredict(this._input, 12, this._ctx);
			while (_alt !== 1 && _alt !== ATN.INVALID_ALT_NUMBER) {
				if (_alt === 1 + 1) {
					{
					{
					this.state = 159;
					this.match(MScGrammarParser.T__14);
					this.state = 162;
					this._errHandler.sync(this);
					switch (this._input.LA(1)) {
					case MScGrammarParser.T__22:
						{
						this.state = 160;
						this.activity();
						}
						break;
					case MScGrammarParser.T__23:
						{
						this.state = 161;
						this.orSubProcessId();
						}
						break;
					default:
						throw new NoViableAltException(this);
					}
					}
					}
				}
				this.state = 168;
				this._errHandler.sync(this);
				_alt = this.interpreter.adaptivePredict(this._input, 12, this._ctx);
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public orStartActivityExpression(): OrStartActivityExpressionContext {
		let _localctx: OrStartActivityExpressionContext = new OrStartActivityExpressionContext(this._ctx, this.state);
		this.enterRule(_localctx, 28, MScGrammarParser.RULE_orStartActivityExpression);
		try {
			let _alt: number;
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 169;
			this.match(MScGrammarParser.T__15);
			this.state = 172;
			this._errHandler.sync(this);
			switch (this._input.LA(1)) {
			case MScGrammarParser.T__22:
				{
				this.state = 170;
				this.activity();
				}
				break;
			case MScGrammarParser.T__23:
				{
				this.state = 171;
				this.andSubProcessId();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			this.state = 174;
			this.match(MScGrammarParser.T__16);
			this.state = 177;
			this._errHandler.sync(this);
			switch (this._input.LA(1)) {
			case MScGrammarParser.T__22:
				{
				this.state = 175;
				this.activity();
				}
				break;
			case MScGrammarParser.T__23:
				{
				this.state = 176;
				this.andSubProcessId();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			this.state = 186;
			this._errHandler.sync(this);
			_alt = this.interpreter.adaptivePredict(this._input, 16, this._ctx);
			while (_alt !== 1 && _alt !== ATN.INVALID_ALT_NUMBER) {
				if (_alt === 1 + 1) {
					{
					{
					this.state = 179;
					this.match(MScGrammarParser.T__16);
					this.state = 182;
					this._errHandler.sync(this);
					switch (this._input.LA(1)) {
					case MScGrammarParser.T__22:
						{
						this.state = 180;
						this.activity();
						}
						break;
					case MScGrammarParser.T__23:
						{
						this.state = 181;
						this.andSubProcessId();
						}
						break;
					default:
						throw new NoViableAltException(this);
					}
					}
					}
				}
				this.state = 188;
				this._errHandler.sync(this);
				_alt = this.interpreter.adaptivePredict(this._input, 16, this._ctx);
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public repeatSinceStartActivityExpression(): RepeatSinceStartActivityExpressionContext {
		let _localctx: RepeatSinceStartActivityExpressionContext = new RepeatSinceStartActivityExpressionContext(this._ctx, this.state);
		this.enterRule(_localctx, 30, MScGrammarParser.RULE_repeatSinceStartActivityExpression);
		try {
			let _alt: number;
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 189;
			this.match(MScGrammarParser.T__17);
			this.state = 190;
			this.activity();
			this.state = 198;
			this._errHandler.sync(this);
			_alt = this.interpreter.adaptivePredict(this._input, 18, this._ctx);
			while (_alt !== 1 && _alt !== ATN.INVALID_ALT_NUMBER) {
				if (_alt === 1 + 1) {
					{
					{
					this.state = 191;
					this.match(MScGrammarParser.T__16);
					this.state = 194;
					this._errHandler.sync(this);
					switch (this._input.LA(1)) {
					case MScGrammarParser.T__22:
						{
						this.state = 192;
						this.activity();
						}
						break;
					case MScGrammarParser.T__23:
						{
						this.state = 193;
						this.andSubProcessId();
						}
						break;
					default:
						throw new NoViableAltException(this);
					}
					}
					}
				}
				this.state = 200;
				this._errHandler.sync(this);
				_alt = this.interpreter.adaptivePredict(this._input, 18, this._ctx);
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public endActivityExpression(): EndActivityExpressionContext {
		let _localctx: EndActivityExpressionContext = new EndActivityExpressionContext(this._ctx, this.state);
		this.enterRule(_localctx, 32, MScGrammarParser.RULE_endActivityExpression);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 204;
			this._errHandler.sync(this);
			switch ( this.interpreter.adaptivePredict(this._input, 19, this._ctx) ) {
			case 1:
				{
				this.state = 201;
				this.sequenceEndActivityExpression();
				}
				break;

			case 2:
				{
				this.state = 202;
				this.andEndActivityExpression();
				}
				break;
